# next

./: .env  .env.example  .gitignore  README.md  deploy_collabrains.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/signal-bot/: Dockerfile  README.md  pyproject.toml
apps/signal-bot/src/signal_bot/: main.py
apps/signal-bot/tests/: test_main.py
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0026aa5966bf_create_categories_table.py  1a9b3c5d7e2f_add_date_format_and_time_format_to_user_preferences.py  3b63cde925a6_address_history.py  440deb6610bb_create_pending_registrations_table.py  5dd392e03c44_contact_details.py  (+46 more)
services/api/src/api/: auth.py  (+82 more)
services/api/tests/: conftest.py  test_activity.py  test_activity_router.py  test_address_parser.py  test_admin_router.py  test_admin_service.py  test_admin_v2_functions.py  test_ai_gateway.py  test_appointments.py  test_auth.py  test_billing.py  test_calendar_sync.py  test_case_members.py  test_cases.py  test_cases_router.py  test_categories_router.py  test_chat.py  test_communication_agent.py  test_contact_parser.py  test_dashboard_router.py  test_decisions.py  test_document_access_control.py  test_document_categories.py  test_document_classification.py  test_document_classification_events.py  test_document_metafields.py  test_document_metafields_events.py  test_document_metafields_ics.py  test_document_reprocess.py  test_documents.py  test_entities.py  test_entity_merge.py  test_events.py  test_facts_router.py  test_feedback.py  test_health.py  test_invitations.py  test_knowledge_graph.py  test_learning_dataset.py  test_learning_router.py  (+32 more)
(+433 files in other folders)
